--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,20 @@
-version: '3.8'
 services:
-  chatroom:
-    build: .
-    command: go run cmd/main.go
+  nats:
+    image: nats:latest
+    container_name: nats
+    ports:
+      - "4222:4222"
+      - "8222:8222"
+    command: ["-js"]
+
+  service:
+    build:
+      context: .
+      dockerfile: Dockerfile.service
+    container_name: service-app
+    depends_on:
+      - nats
+    environment:
+      - NATS_URL=nats://nats:4222
+    ports:
+      - "8080:8080"
